--- a/index.html
+++ b/index.html
@@ -1431,7 +1431,7 @@ Real estate market analysis Ghana
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="P2.jpeg" alt="">
+                        <img class="img-fluid" src="ft.jpg" alt="">
                        
                     </div>
                 </div>
@@ -1456,54 +1456,105 @@ Real estate market analysis Ghana
         </div>
     </div>
     <!-- About End -->
-      <!-- Feature Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h4 class="section-title">Why Choose Us!</h4>
-                    <h1 class="display-5 mb-4">Why You Should Trust Us? </h1>
-                    <p class="mb-4"> PJ Realty has a strong network of contacts within the real estate industry, allowing us  to access a wide range of properties and opportunities.</p>
-                    <div class="row g-4">
-                        <div class="col-12">
-                            <div class="d-flex align-items-start">
-                                <img class="flex-shrink-0" src="img/icons/icon-2.png" alt="Icon">
-                                <div class="ms-4">
-                                    <h3>Personalized Service </h3>
-                                    <p class="mb-0">Each client receives personalized attention from  agents. We take the time to understand your unique requirements and offer tailored solutions.  </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="d-flex align-items-start">
-                                <img class="flex-shrink-0" src="img/icons/icon-3.png" alt="Icon">
-                                <div class="ms-4">
-                                    <h3>Local Expertise </h3>
-                                    <p class="mb-0">Agents possesses extensive knowledge of the Ghanaian real estate market. They can provide valuable insights into local neighborhoods, trends, and regulations.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="d-flex align-items-start">
-                                <img class="flex-shrink-0" src="img/icons/icon-4.png" alt="Icon">
-                                <div class="ms-4">
-                                    <h3>Trustworthiness </h3>
-                                    <p class="mb-0">PJ Realty is committed to conducting business with integrity and transparency.
-                                         We prioritize building trust with their clients and maintaining a reputation for excellence  </p>
-                                </div>
-                            </div>
-                        </div>
+     <!-- Bento Style Feature Section with Micro Video -->
+<div class="container-xxl py-5 bg-light">
+    <div class="container">
+        <div class="row g-4">
+            <!-- Title Section -->
+            <div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="p-4 rounded-4 bg-white shadow-sm">
+                    <h4 class="text-primary mb-2">Why Choose Us!</h4>
+                    <h1 class="display-6 mb-0">Why You Should Trust Us?</h1>
+                </div>
+            </div>
+
+            <!-- Video Card -->
+            <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
+                <div class="feature-card h-100 rounded-4 overflow-hidden position-relative">
+                    <video autoplay loop muted playsinline class="w-100 h-100 object-cover" style="min-height: 300px;">
+                        <source src="TYP.mp4" type="video/mp4">
+                        <!-- Fallback image if video doesn't load -->
+                        <img src="V (2).jpg" alt="PJ Realty showcase" class="img-fluid">
+                    </video>
+                    <div class="position-absolute bottom-0 start-0 p-4 bg-gradient-dark w-100">
+                        <p class="text-white mb-0">PJ Realty has a strong network of contacts within the real estate industry, allowing us to access a wide range of properties and opportunities.</p>
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="feature-img">
-                        <img class="img-fluid" src="V (2).jpg" alt="">
-                     
+            </div>
+
+            <!-- Feature Cards -->
+            <div class="col-lg-6">
+                <div class="row g-4 h-100">
+                    <!-- Card 1 -->
+                    <div class="col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="feature-card h-100 p-4 rounded-4 bg-white shadow-sm">
+                            <div class="d-flex align-items-center mb-3">
+                                <img class="flex-shrink-0 me-3" src="img/icons/icon-2.png" alt="Icon" width="40">
+                                <h3 class="h5 mb-0">Personalized Service</h3>
+                            </div>
+                            <p class="mb-0">Each client receives personalized attention from agents. We take the time to understand your unique requirements.</p>
+                        </div>
+                    </div>
+
+                    <!-- Card 2 -->
+                    <div class="col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="feature-card h-100 p-4 rounded-4 bg-white shadow-sm">
+                            <div class="d-flex align-items-center mb-3">
+                                <img class="flex-shrink-0 me-3" src="img/icons/icon-3.png" alt="Icon" width="40">
+                                <h3 class="h5 mb-0">Local Expertise</h3>
+                            </div>
+                            <p class="mb-0">Agents possess extensive knowledge of the Ghanaian real estate market and local neighborhoods.</p>
+                        </div>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div class="col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="feature-card h-100 p-4 rounded-4 bg-white shadow-sm">
+                            <div class="d-flex align-items-center mb-3">
+                                <img class="flex-shrink-0 me-3" src="img/icons/icon-4.png" alt="Icon" width="40">
+                                <h3 class="h5 mb-0">Trustworthiness</h3>
+                            </div>
+                            <p class="mb-0">Committed to integrity and transparency, building trust with clients through excellence.</p>
+                        </div>
+                    </div>
+
+                    <!-- Stats Card -->
+                    <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="feature-card h-100 p-4 rounded-4 bg-primary text-white">
+                            <h3 class="h5 mb-3">Our Impact</h3>
+                            <div class="d-flex justify-content-between mb-2">
+                                <span>Properties Listed</span>
+                                <strong>500+</strong>
+                            </div>
+                            <div class="d-flex justify-content-between mb-2">
+                                <span>Satisfied Clients</span>
+                                <strong>30+</strong>
+                            </div>
+                            <div class="d-flex justify-content-between">
+                                <span>Years Experience</span>
+                                <strong>7+</strong>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+
+<style>
+    .feature-card {
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        border: 1px solid rgba(0,0,0,0.05);
+    }
+    .feature-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+    }
+    .bg-gradient-dark {
+        background: linear-gradient(transparent, rgba(0,0,0,0.7));
+    }
+</style>
  <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
