--- a/index.html
+++ b/index.html
@@ -1683,9 +1683,9 @@ Real estate market analysis Ghana
                         <h3>PJ Realty</h3>
                         <p>Your trusted partner for luxury properties in Ghana. We specialize in connecting discerning clients with exceptional homes.</p>
                         <div class="social-links">
-                            <a href="https://www.instagram.com/pj_realty_p/ "><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.instagram.com/pj_realty_p/ "><i class="fab fa-instagram"></i></a>
-                            <a href="https://www.instagram.com/pj_realty_p/ "><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.instagram.com/pj_realty_homes/ "><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.instagram.com/pj_realty_homes/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/pj_realty_homes/ "><i class="fab fa-linkedin-in"></i></a>
                           
                         </div>
                     </div>
