--- a/Properties.html
+++ b/Properties.html
@@ -122,7 +122,7 @@ Real estate market analysis Ghana
                         <img class="img-fluid" src="m1.png" alt="">
                     </div>
                     <div class="d-flex border-bottom">
-                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker-alt text-primary me-2"></i> Lakeside</small>
+                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker-alt text-primary me-2"></i> East legon </small>
                         <small class="flex-fill text-center border-end py-2"><i class="fa fa-bed-alt text-primary me-2"></i>4-bedroom</small>
 
                     </div>
@@ -215,6 +215,110 @@ Location; east legon hills
 
 
 
+<!-- Package Start -->
+ <div class="container-xxl py-5">
+    <div class="container">
+        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+          
+            <h1 class="mb-5">Houses</h1>
+        </div>
+        <div class="row g-4 justify-content-center">
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="package-item">
+                    <div class="overflow-hidden">
+                        <img class="img-fluid" src="m1.png" alt="">
+                    </div>
+                    <div class="d-flex border-bottom">
+                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker-alt text-primary me-2"></i> East legon </small>
+                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-bed-alt text-primary me-2"></i>4-bedroom</small>
+
+                    </div>
+                    <div class="text-center p-4">
+                        <h3 class="mb-0">$2500 / Rent </h3>
+                        <div class="mb-3">
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                        </div>
+                        <p> Executive 4bedrooms Furnished/ unfurnished house Renting at East Legon Adjiringanor on a tarred road  </p>
+                        <div class="d-flex justify-content-center mb-2">
+                            <a href=" https://www.whatsapp.com/catalog/233538761404/?app_absent=0" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Find Out More </a>
+                            <a href="https://www.whatsapp.com/catalog/233538761404/?app_absent=0 " class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Book Tour </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="package-item">
+                    <div class="overflow-hidden">
+                        <img class="img-fluid" src="m2.png" alt="">
+                    </div>
+                    <div class="d-flex border-bottom">
+                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>East Legon  </small>
+                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-bed-alt text-primary me-2"></i>5-bedroom</small>
+
+                    </div>
+                    <div class="text-center p-4">
+                        <h3 class="mb-0">850,000USD </h3>
+                        <div class="mb-3">
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                        </div>
+                        <p>  AN EXECUTIVE HOUSE FOR SALE
+
+An Executive 2 storey 5+1 Bedrooms With Swimming Pool, Rooftop With Kitchen Net With Nice View,
+All Rooms Ensuite, Wardrobes, 2 Fitted Kitchens etc.
+
+Location East Legon Adjiringanor
+
+850,000 $ Negotiable</p>
+                        <div class="d-flex justify-content-center mb-2">
+                            <a href=" https://www.whatsapp.com/catalog/233538761404/?app_absent=0" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Find Out More </a>
+                            <a href="https://www.whatsapp.com/catalog/233538761404/?app_absent=0 " class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Book Tour </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="package-item">
+                    <div class="overflow-hidden">
+                        <img class="img-fluid" src="m3.png" alt="">
+                    </div>
+                    <div class="d-flex border-bottom">
+                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>  East legon hills </small>
+                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-bed-alt text-primary me-2"></i>4-bedroom</small>
+
+                    </div>
+                    <div class="text-center p-4">
+                        <h3 class="mb-0">2,000USD/Per Month </h3>
+                        <div class="mb-3">
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                        </div>
+                        <p>
+4bedrooms house for rent or sale
+For rent price $2000 / month for one year rental
+Location; east legon hills
+                        </p>
+                        <div class="d-flex justify-content-center mb-2">
+                            <a href=" https://www.whatsapp.com/catalog/233538761404/?app_absent=0" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Find Out More </a>
+                            <a href="https://www.whatsapp.com/catalog/233538761404/?app_absent=0 " class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Book Tour </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Package End -->
 
 
 
@@ -442,15 +546,15 @@ All rooms ensuite
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="package-item">
                     <div class="overflow-hidden">
-                        <img class="img-fluid" src="m4.png" alt="">
+                        <img class="img-fluid" src="z1.jpg" alt="">
                     </div>
                     <div class="d-flex border-bottom">
-                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>School junction Nanacrom </small>
+                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>  Ashley Botwe </small>
                         <small class="flex-fill text-center border-end py-2"><i class="fa fa-bed-alt text-primary me-2"></i>4-bedroom</small>
 
                     </div>
                     <div class="text-center p-4">
-                        <h3 class="mb-0">$1500 USD </h3>
+                        <h3 class="mb-0">2.8 million Ghana cedis  </h3>
                         <div class="mb-3">
                             <small class="fa fa-star text-primary"></small>
                             <small class="fa fa-star text-primary"></small>
@@ -458,9 +562,19 @@ All rooms ensuite
                             <small class="fa fa-star text-primary"></small>
                             <small class="fa fa-star text-primary"></small>
                         </div>
-                        <p> Exquisite 4 bedroom house for rent at School junction Nanacrom
+                        <p> Executive 4) Bedroom House For Sale at Ashley Botwe not far from Botwe star-bite 
 
-Price- $1500 USD
+Price: 2.8 million Ghana cedis Negotiable)
+
+Property Details Include:
+* Bedrooms En-suite
+* Fitted Kitchen
+* Spacious Rooms & Living Area
+* Guest Washroom
+* Spacious Self-compound
+* Walled & Gated
+* ⁠good road access
+
 </p>
                         <div class="d-flex justify-content-center mb-2">
                             <a href=" https://www.whatsapp.com/catalog/233538761404/?app_absent=0" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Find Out More </a>
@@ -472,7 +586,7 @@ Price- $1500 USD
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="package-item">
                     <div class="overflow-hidden">
-                        <img class="img-fluid" src="m5.png" alt="">
+                        <img class="img-fluid" src="z2.jpg" alt="">
                     </div>
                     <div class="d-flex border-bottom">
                         <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>East Legon  </small>
@@ -480,7 +594,7 @@ Price- $1500 USD
 
                     </div>
                     <div class="text-center p-4">
-                        <h3 class="mb-0">$1800USD </h3>
+                        <h3 class="mb-0">$4000/month  </h3>
                         <div class="mb-3">
                             <small class="fa fa-star text-primary"></small>
                             <small class="fa fa-star text-primary"></small>
@@ -488,9 +602,12 @@ Price- $1500 USD
                             <small class="fa fa-star text-primary"></small>
                             <small class="fa fa-star text-primary"></small>
                         </div>
-                        <p> 4 bedrooms house with a pool. +bq
-Price $1800
-Location; East legon Adjringanor </p>
+                        <p> 
+                            East Legon 
+Executive 4bedrooms Fully furnished 
+Tarred road
+$4000/month
+                        </p>
                         <div class="d-flex justify-content-center mb-2">
                             <a href=" https://www.whatsapp.com/catalog/233538761404/?app_absent=0" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Find Out More </a>
                             <a href="https://www.whatsapp.com/catalog/233538761404/?app_absent=0 " class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Book Tour </a>
@@ -501,15 +618,15 @@ Location; East legon Adjringanor </p>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="package-item">
                     <div class="overflow-hidden">
-                        <img class="img-fluid" src="m6.png" alt="">
+                        <img class="img-fluid" src="z3.jpg" alt="">
                     </div>
                     <div class="d-flex border-bottom">
-                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>East LEGON hills </small>
+                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Main East legon.  </small>
                         <small class="flex-fill text-center border-end py-2"><i class="fa fa-bed-alt text-primary me-2"></i>4-bedroom</small>
 
                     </div>
                     <div class="text-center p-4">
-                        <h3 class="mb-0">$320K </h3>
+                        <h3 class="mb-0"> $4,000/month  </h3>
                         <div class="mb-3">
                             <small class="fa fa-star text-primary"></small>
                             <small class="fa fa-star text-primary"></small>
@@ -518,8 +635,12 @@ Location; East legon Adjringanor </p>
                             <small class="fa fa-star text-primary"></small>
                         </div>
                         <p>
-                           Fully furnished 4 bedrooms house with 1BQ and a swimming pool for sale at East LEGON hills
-$320K
+                  Exquisite fully furnished 4 bedroom house for rent in Main East legon.
+Comes with a 
+* ⁠Standby generator.
+* ⁠24/7 security service.
+*swimming pool 
+*gym 
                         </p>
                         <div class="d-flex justify-content-center mb-2">
                             <a href=" https://www.whatsapp.com/catalog/233538761404/?app_absent=0" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Find Out More </a>
