--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@ Real estate market analysis Ghana
             <i class="fas fa-times"></i>
         </div>
         <a href="index.html" class="active">Home</a>
-        <a href="properties.html">Properties</a>
+        <a href="https://pjrealtyhomes.com/Properties.html">Properties</a>
         <a href="services.html">Services</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
@@ -1413,7 +1413,7 @@ Real estate market analysis Ghana
         <div class="hero-content">
             <h1 style="color: #fff;">Your Trusted Partner In Real Estate</h1>
             <p>Discover exceptional properties in Ghana's most desirable locations, curated by our team of dedicated specialists.</p>
-            <a href="properties.html" class="btn">View Properties</a>
+            <a href="https://pjrealtyhomes.com/Properties.html" class="btn">View Properties</a>
         </div>
         
         <!-- Scroll Down Indicator -->
