--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@ Real estate market analysis Ghana
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link ">About</a>
-                <a href="Properties.html" class="nav-item nav-link">Properties </a>
+                <a href="https://pjrealtyhomes.com/Properties.html" class="nav-item nav-link">Properties </a>
                 <a href="service.html" class="nav-item nav-link">Services</a>
                 <a href="feature.html" class="nav-item nav-link"> Features </a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
