--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,14 @@
                     }
                 </style>
 
-               
+                <a href="https://wa.me/c/233538761404"
+                   class="btn nav-whatsapp"
+                   aria-label="WhatsApp PJ Realty"
+                   target="_blank"
+                   rel="noopener noreferrer">
+                    <i class="fab fa-whatsapp wa-icon" aria-hidden="true"></i>
+                    <span class="wa-text">Whatsapp Us</span>
+                </a>
 
                 <div class="menu-toggle" aria-label="Open menu" role="button" tabindex="0">
                     <i class="fas fa-bars" aria-hidden="true"></i>
@@ -1193,7 +1200,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-img" data-aos="fade-right">
-                    <img src="ft.jpg" alt="PJ Realty">
+                    <img src="f1 (3).jpg" alt="PJ Realty">
                 </div>
                 <div class="about-text" data-aos="fade-left">
                     <h4>Finding You A Home</h4>
@@ -1319,25 +1326,7 @@
         </div>
     </section>
 
-    <!-- Testimonials Section -->
-    <section class="section testimonials">
-        <div class="container">
-            <div class="section-header" data-aos="fade-up">
-                <h2>Client Testimonials</h2>
-                <p>What our clients say about working with us</p>
-            </div>
-            
-            <div class="testimonial-slider" data-aos="fade-up">
-                <div class="testimonial-item">
-                    <div class="testimonial-text">
-                        PJ Realty made the process of finding our dream home in Accra seamless. Their attention to detail and understanding of our needs was exceptional.
-                    </div>
-                    <div class="testimonial-author">Kwame Adjei</div>
-                    <div class="testimonial-role">Property Investor</div>
-                </div>
-            </div>
-        </div>
-    </section>
+   
 
     <!-- Newsletter Section -->
     <section class="newsletter">
