--- a/index.html
+++ b/index.html
@@ -1681,7 +1681,7 @@ Real estate market analysis Ghana
                 <div class="footer-links">
                     <div class="footer-about">
                         <h3>PJ Realty</h3>
-                        <p>Your trusted partner for luxury properties in Ghana. We specialize in connecting discerning clients with exceptional homes.</p>
+                        <p>Your trusted partner for luxury properties in West Africa . We specialize in connecting discerning clients with Luxury/Affordable properties.</p>
                         <div class="social-links">
                             <a href="https://www.instagram.com/pj_realty_homes/ "><i class="fab fa-facebook-f"></i></a>
                             <a href="https://www.instagram.com/pj_realty_homes/"><i class="fab fa-instagram"></i></a>
@@ -1831,3 +1831,4 @@ Real estate market analysis Ghana
     <script src="js/main.js"></script>
 </body>
 </html>
+
