--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@ Real estate market analysis Ghana
             <h1 class="display-1 text-white animated slideInDown"> Contact PJ Realty Today </h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="#"> Your Ghanaian Real Estate Partner </a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#"> Your Trusted Real Estate Partner </a></li>
            
                 </ol>
             </nav>
@@ -230,7 +230,7 @@ Real estate market analysis Ghana
                 <div class="footer-links">
                     <div class="footer-about">
                         <h3>PJ Realty</h3>
-                        <p>Your trusted partner for luxury properties in Ghana. We specialize in connecting discerning clients with exceptional homes.</p>
+                        <p>Your trusted partner for luxury properties in West Africa . We specialize in connecting discerning clients with Luxury/Affordable properties. </p>
                         <div class="social-links">
                             <a href="https://www.instagram.com/pj_realty_homes/ "><i class="fab fa-facebook-f"></i></a>
                             <a href="https://www.instagram.com/pj_realty_homes/"><i class="fab fa-instagram"></i></a>
@@ -396,3 +396,4 @@ footer {
 </body>
 
 </html>
+
