--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -1103,7 +1104,7 @@ Real estate market analysis Ghana
                 <div class="nav-links">
                        <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link ">About</a>
-                <a href="Properties.html" class="nav-item nav-link">Properties </a>
+                <a href="https://pjrealtyhomes.com/Properties.html" class="nav-item nav-link">Properties </a>
                 <a href="service.html" class="nav-item nav-link">Services</a>
                 <a href="feature.html" class="nav-item nav-link"> Features </a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -1124,7 +1125,7 @@ Real estate market analysis Ghana
             <i class="fas fa-times"></i>
         </div>
         <a href="index.html" class="active">Home</a>
-        <a href="properties.html">Properties</a>
+        <a href="https://pjrealtyhomes.com/Properties.html">Properties</a>
         <a href="services.html">Services</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
@@ -1415,7 +1416,7 @@ Real estate market analysis Ghana
         <div class="hero-content">
             <h1 style="color: #fff;">Your Trusted Partner In Real Estate</h1>
             <p>Discover exceptional properties in Ghana's most desirable locations, curated by our team of dedicated specialists.</p>
-            <a href="properties.html" class="btn">View Properties</a>
+            <a href="https://pjrealtyhomes.com/Properties.html" class="btn">View Properties</a>
         </div>
         
         <!-- Scroll Down Indicator -->
@@ -1525,8 +1526,8 @@ Real estate market analysis Ghana
                         <div class="feature-card h-100 p-4 rounded-4 bg-primary text-white">
                             <h3 class="h5 mb-3">Our Impact</h3>
                             <div class="d-flex justify-content-between mb-2">
-                                <span>Properties Listed</span>
-                                <strong>500+</strong>
+                                <span>Properties </span>
+                                <strong>100+</strong>
                             </div>
                             <div class="d-flex justify-content-between mb-2">
                                 <span>Satisfied Clients</span>
