--- a/Properties.html
+++ b/Properties.html
@@ -1754,7 +1754,7 @@
     <section class="hero">
         <img src="https://images.unsplash.com/photo-1613490493576-7fde63acd811?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2071&q=80" alt="Luxury Property in Ghana" class="hero-bg">
         <div class="hero-content">
-            <h1>Luxury Properties in Ghana</h1>
+            <h1>View  Luxury Properties </h1>
             <p>Discover exceptional real estate opportunities with our premium services. Find your dream home in Ghana's most desirable locations.</p>
             <a href="https://pjrealtyhomes.com/Properties.html" class="btn">Explore Properties</a>
         </div>
