--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -1480,7 +1481,7 @@ Real estate market analysis Ghana
                         <img src="V (2).jpg" alt="PJ Realty showcase" class="img-fluid">
                     </video>
                     <div class="position-absolute bottom-0 start-0 p-4 bg-gradient-dark w-100">
-                        <p class="text-white mb-0">PJ Realty has a strong network of contacts within the real estate industry, allowing us to access a wide range of properties and opportunities.</p>
+                        <p style="color: #1a1a1a;"  class="text-white mb-0">PJ Realty has a strong network of contacts within the real estate industry, allowing us to access a wide range of properties and opportunities.</p>
                     </div>
                 </div>
             </div>
