--- a/Properties.html
+++ b/Properties.html
@@ -2105,6 +2105,82 @@
                 bathrooms: 3,
                 description: "Luxury kitchen, Swimming pool, Serene environment. Furnished Price - $4000/month, Unfurnished Price - $3500/month. Negotiable. Agency terms and conditions apply!"
             },
+          {
+    "id": 7,
+    "title": "Now renting ☑️ 2 Bedroom Apartment in Gated Community",
+    "location": "East Legon, Accra",
+    "price": 1800,
+    "rating": 4.9,
+    "images": [
+        "zwe (6).jpg",
+        "zwe (1).jpg",
+        "zwe (2).jpg",
+        "zwe (3).jpg",
+        "zwe (4).jpg",
+        "zwe (5).jpg"
+    ],
+    "bedrooms": 2,
+    "beds": 2,
+    "bathrooms": 2,
+    "description": "2 bedroom apartment for rent in a gated community in East Legon. Serene environment, 24/7 Security, High-speed Internet, and other premium amenities. $1800/month. Negotiable. Agency terms and conditions apply!"
+},
+{
+    "id": 8,
+    "title": "Four(4) Bedroom Self Compound House for Rent",
+    "location": "East Legon ARS, Accra",
+    "price": 1500,
+    "rating": 4.8,
+    "images": [
+        "zx (7).jpg",
+        "zx (2).jpg",
+        "zx (3).jpg",
+        "zx (4).jpg",
+        "zx (6).jpg",
+        "zx (5).jpg"
+    ],
+    "bedrooms": 4,
+    "beds": 4,
+    "bathrooms": 4,
+    "description": "Four(4) bedroom self compound house for rent at East Legon ARS. • Air conditioners installed • All rooms are ensuite • Wardrobes • Living & Dining area • Balcony • Ghana water flows • Good road access; tarred road throughout • 1 month security deposit. Price: $1,500/month for a year advance."
+},
+{
+    "id": 9,
+    "title": "Now renting ✔️ Fully Furnished 3Bedroom Self Compound",
+    "location": "East Airport - Opposite Chain Homes, Accra",
+    "price": 3000,
+    "rating": 4.9,
+    "images": [
+        "zc (6).jpg",
+        "zc (2).jpg",
+        "zc (3).jpg",
+        "zc (4).jpg",
+          "zc (1).jpg",
+        "zc (5).jpg"
+    ],
+    "bedrooms": 3,
+    "beds": 3,
+    "bathrooms": 4,
+    "description": "PROPERTY FOR RENT. Fully furnished 3bedroom self compound all ensuite. One guest washroom. 2bedroom boys quarters all ensuite. Located in a very prime area of Accra. Comes with a standby generator. Price: $3000 per month."
+},
+
+{
+    "id": 10,
+    "title": "Now Listed ✔️ Stunning 4 Bedroom Exclusive House + BQ",
+    "location": "East Legon Adjiringanor, Accra",
+    "price": 670000,
+    "rating": 5.0,
+    "images": [
+        "zv (6).jpg",
+        "zv (2).jpg",
+        "zv (3).jpg",
+        "zv (4).jpg",
+        "zv (5).jpg"
+    ],
+    "bedrooms": 4,
+    "beds": 4,
+    "bathrooms": 5,
+    "description": "Stunning 4 Bedroom Exclusive House + BQ for sale! Comes with modern amenities. Features: 4bedroom modern home • All Rooms En-suite • Fully Completed • Ready to move in • Prime East Legon • Luxurious floor plan • Fully Fitted kitchen • Well crafted elevator lift • Serene Environment. Price: $670,000 (negotiable)."
+},
             {
                 id: 6,
                 title: "Executive Fully Furnished 4 Bedroom House",
