--- a/Properties.html
+++ b/Properties.html
@@ -1717,7 +1717,7 @@
                     </svg>
                     <span style="display:flex;flex-direction:column;line-height:1;">
                         <span style="font-family:'Cormorant Garamond',serif;font-weight:700;font-size:20px;color:var(--text);letter-spacing:1px;">PJ REALTY</span>
-                        <span style="font-family:'Inter',sans-serif;font-weight:300;font-size:11px;color:var(--text-light);letter-spacing:1px;">Luxury Properties Ghana</span>
+                        <span style="font-family:'Inter',sans-serif;font-weight:300;font-size:11px;color:var(--text-light);letter-spacing:1px;"> Properties </span>
                     </span>
                 </a>
                 <div class="nav-links">
@@ -2002,7 +2002,7 @@
             {
                 id: 1,
                 title: "Executive Semi-Furnished 4 Bedrooms House",
-                location: "Cantonment, Abuja",
+                location: "Cantonment, Accra",
                 price: 4500,
                 currency: 'USD',
                 description: "Luxury kitchen, Swimming pool, Serene environment. Selling Price - $750,000, Renting price - $4500, Negotiable",
@@ -2025,7 +2025,7 @@
             {
                 id: 2,
                 title: "3 Bedroom Semi-Furnished House with Boys Quarters",
-                location: "Cantonment, Abuja",
+                location: "Cantonment, Accra",
                 price: 4200,
                 rating: 4.95,
                 images: [
@@ -2045,7 +2045,7 @@
             {
                 id: 3,
                 title: "EXCLUSIVE 1 BEDROOM APARTMENT",
-                location: "Wuse, Abuja",
+                location: "Cantonment, Accra",
                 price: 4200,
                 rating: 4.75,
                  images: [
@@ -2066,7 +2066,7 @@
             {
                 id: 4,
                 title: "Now renting ✔️ Executive semi-furnished & fully furnished house for rent",
-                location: "Cantonment, Abuja",
+                 location: "Cantonment, Accra",
                 price: 4500,
                 currency: 'USD',
                 rating: 4.9,
