--- a/Properties.html
+++ b/Properties.html
@@ -2181,6 +2181,24 @@
     "bathrooms": 5,
     "description": "Stunning 4 Bedroom Exclusive House + BQ for sale! Comes with modern amenities. Features: 4bedroom modern home • All Rooms En-suite • Fully Completed • Ready to move in • Prime East Legon • Luxurious floor plan • Fully Fitted kitchen • Well crafted elevator lift • Serene Environment. Price: $670,000 (negotiable)."
 },
+{
+    "id": 10,
+    "title": "Now Listed ✔️  2-bedroom apartment for rent at Spintex",
+    "location": "Spintex, Accra",
+    "price": 800,
+    "rating": 5.0,
+    "images": [
+        "ght (1).jpg",
+        "ght (2).jpg",
+        "ght (3).jpg",
+        "ght (4).jpg",
+        "ght (5).jpg"
+    ],
+    "bedrooms": 2,
+    "beds": 2,
+    "bathrooms": 2,
+    "description": "Now Listed for Rent ✔️ 2-bedroom apartment for rent at Spintex ●All en-suitee ●Visitors washroom ●Wardrobes ●fan ●AC ●walk in closet ●Fitted kitchen ●dining area ●Balcony $800/month "
+},
             {
                 id: 6,
                 title: "Executive Fully Furnished 4 Bedroom House",
