--- a/about.html
+++ b/about.html
@@ -134,9 +134,10 @@ Real estate market analysis Ghana
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h4 class="section-title">Finding You A Home </h4>
                     <h1 class="display-5 mb-4"> Achieve your real estate goals. </h1>
-                    <p> PJ Realty is committed to delivering exceptional services that cater to the diverse needs of our clients. With a deep-rooted understanding of the Ghanaian real estate market, we offer a comprehensive range of solutions tailored to your specific goals.
+                    <p> PJ Realty is committed to delivering exceptional services that cater to the diverse needs of our clients.
+                        With a deep-rooted understanding of the Ghanaian real estate market, we offer a comprehensive range of solutions tailored to your specific goals.
 
-                        Whether you're a first-time homebuyer embarking on a new chapter, a seasoned investor seeking 
+                        Whether you're a first-time homebuyer embarking on a new chapter,property management , buliding ,  a seasoned investor seeking 
                         lucrative opportunities, or a tenant searching for the perfect living space, PJ Realty is here
                          to guide you every step of the way. Our experienced team of real estate professionals is
                          dedicated to providing personalized assistance, ensuring a seamless and stress-free experience. </p>
@@ -396,4 +397,5 @@ footer {
 </body>
 
 </html>
+
 
